--- a/less/theme992up.less
+++ b/less/theme992up.less
@@ -25,8 +25,10 @@ html {
 // --------------------------------------------------
 .header_wrap {
   padding-top: 15px;
-  height: 190px;
-
+  height: 175px;
+}
+.header_descriptor {
+  margin-top: 1rem;
 }
 
 
@@ -38,7 +40,8 @@ html {
   .navbar-nav {
 
     > li > a {
-      padding: 10px 20px;
+      padding: 10px 10px;
+      font-size: 1.3rem;
     }
   }
 }
@@ -69,6 +72,17 @@ html {
   &:before {
     margin-left: -0.248rem;
   }
+}
+
+
+
+//
+// 8. Горячие статьи
+// --------------------------------------------------
+.docs {
+    li {
+      margin: 25px 60px;
+    }
 }
 
 
