--- a/less/theme.less
+++ b/less/theme.less
@@ -731,6 +731,9 @@ h1,h2,h3,h4,h5,h6 {
 .footer_logo > img {
   .center-block();
 }
+.footer_item {
+  font-size: 0.8125rem;
+}
 
 
 
@@ -1360,6 +1363,64 @@ img + .nophoto {
   }
 }
 .video-title {
+  text-align: center;
+  line-height: 1.2rem;
+  padding: 3px 0;
+}
+
+
+
+//
+// Мы в СМИ
+// --------------------------------------------------
+.media-filter {
+  margin-bottom: 20px;
+}
+.media-container {
+  .make-row(@gutter: 20px);
+}
+.media-item {
+  cursor: pointer;
+  height: 12.56rem;
+  margin-bottom: 15px;
+  max-width: 245px;
+  &:hover {
+    text-decoration: underline;
+  }
+  .make-sm-column(6; @gutter: 20px);
+  .make-md-column(4; @gutter: 20px);
+}
+.media-preview {
+  height: 9.6875rem;
+  background: url(../img/nomedia.png) no-repeat center center;
+  background-size: cover;
+  overflow: hidden;
+  border: 0.4rem solid @gray-lighter;
+  position: relative;
+  
+  &:before {
+    content: " ";
+    position: absolute;
+    width: 48px;
+    height: 60px;
+    left: 50%;
+    top: 50%;
+    margin: -30px 0 0 -24px;
+    background: url(../img/eye.png) no-repeat left top;
+    opacity: 0.5;
+  }
+  
+  &.active:before,
+  &:hover:before {
+    opacity: 1;
+  }
+
+  img {
+    width: 100%;
+    height: 9.6875rem;
+  }
+}
+.media-title {
   text-align: center;
   line-height: 1.2rem;
   padding: 3px 0;
